--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "devDependencies": {
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.7.5",
-        "vite": "^4.0.0"
+        "vite": "^4.0.0",
+        "@prettier/plugin-php": "0.14.3",
+        "prettier": "2.0.5"
     }
+    
 }
